2001-10-18  Glynn Foster <glynn.foster@sun.com> 

	* basep-widget.c, foobar-widget.c, gnome-panel-properties.c
	  menu.c, panel-widget.c, panel-widget.h, panel.c
	  panel_config_global.h,  session.c: Removed the applet_padding
          and applet_padding_border global properties and consequently
	  the no_padding_ends param on panel_widget_new

2001-10-12  Alex Larsson  <alexl@redhat.com>

	* panel_config.c (panel_config):
	un-ifdef out this function. Seems to work reasonably well
	already.

2001-10-12  Alex Larsson  <alexl@redhat.com>

	* main.c (kill_free_drawers):
	Queue up all the destroys until after we've gone through
	the panel_list, since the destroys can change the list.

2001-10-11  Alex Larsson  <alexl@redhat.com>

	* gnome-run.c (simple_contents_shown):
	Remove gtk_clist_columns_autosize() call. It crashed,
	and we only have one column anyway.
	
2001-10-11  Alex Larsson  <alexl@redhat.com>

        * foobar-widget.c (foobar_widget_update_winhints):
	Use the gtk hint calls.

	* basep-widget.c (basep_widget_update_winhints):
	Use the gtk hint calls.
	
2001-10-11  Alex Larsson  <alexl@redhat.com>

	* menu.c (menus_have_icons):
	New function that always returns TRUE. Should use GConf
	instead. Changed all gnome_preferences_get_menus_have_icons
	to menus_have_icons().
	(fake_pixmap_from_fake):
	Connect to the signals before showing the widget.
	
2001-10-11  Alex Larsson  <alexl@redhat.com>

	* applet.c (applet_button_press):
	Don't return TRUE here, it makes the buttons not
	work. I'm not sure about the comment here in the old
	code. Returning TRUE never blocked anything in
	gtk 1.2....

	* panel-widget.c:
	Fix some code inside #ifdef PANEL_DEBUG
	
2001-10-11  Alex Larsson  <alexl@redhat.com>

	* menu-fentry.c (fr_fill_dir, fr_read_dir,
	fr_check_and_reread):
	Move to new GnomeDesktopItem api

	* menu-fentry.h (struct DirRect):
	renams dentry* to ditem*

	* menu.c (edit_direntry, add_applet):
	Warn when running commented function.
	(show_item_menu):