@@ -1,3 +1,9 @@
+2001-10-18  Glynn Foster  <glynn.foster@sun.com>
+
+	* button-widget.c, gnome-panel-properties.c:
+	* panel_config_global.h, session.c:  Remove fast_button_scaling
+	  and use GDK_INTERP_HYPER as default instead.
+
 2001-10-18  Glynn Foster <glynn.foster@sun.com> 
 
 	* basep-widget.c, foobar-widget.c, gnome-panel-properties.c
